--- a/MUSIC/contact.html
+++ b/MUSIC/contact.html
@@ -26,24 +26,16 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li> &nbsp; &nbsp;
-        <li><a href="lessons.html">Lessons</a></li> &nbsp; &nbsp;
-        <li><a href="instructors.html">Instructors</a></li> &nbsp; &nbsp;
-        <li><a href="instructors.html">Rentals</a></li> &nbsp; &nbsp;
-        <li><a href="contact.html">Contact</a></li> &nbsp; &nbsp;
+        <li><a href="index.html">Home</a></li>
+        <li><a href="lessons.html">Lessons</a></li>
+        <li><a href="instructors.html">Instructors</a></li>
+        <li><a href="rentals.html">Rentals</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
     <!-- Use the main area to add the main content to the webpage -->
     <main>
-      <p>Welcome to Strike a Chord. We are a local music store, specializing
-        in lessons and rental equipment. Our mission is to provide world-class
-        instruction with each music lesson.</p>
-
-      <p>We provide lessons for several musical instruments, including
-        piano, guitar, bass, and violin. Your first two lessons are FREE.
-        Contact us today to get started!</p>
-
 
         <div id="contact">
           <h2>Contact us today to schedule your first lesson.</h2>
@@ -52,6 +44,39 @@
           <p>Email: <a href=”mailto:lessons@strikeachord.net” class="email-link">lessons@
           strikeachord.net</a></p>
           <p>We are located at: 1122 Music Lane, Chicago, IL 60007</p>
+        </div>
+
+        <div id="form">
+          <h2>Complete the form below and one of our staff members will contact you.</h2>
+
+          <form class="form-grid"><!-- Start Form -->
+            <fieldset>
+            <legend>Customer Information</legend>
+              <label for="fName">First Name:</label>
+              <input type="text" name="fName" id="fName">
+              <label for="lName">Last Name:</label>
+              <input type="text" name="lName" id="lName">
+              <label for="email">Email:</label>
+              <input type="email" name="email" id="email">
+              <label for="phone">Phone:</label>
+              <input type="tel" id="phone" name="phone">
+            </fieldset>
+
+            <fieldset>
+            <legend>Musical Interest</legend>
+              <p>I am interested in:</p>
+              <label for="guitarles"><input type="checkbox" name="interest"
+                id="guitarles" value="Guitar Lessons">Guitar Lessons</label>
+              <label for="piano"><input type="checkbox" name="interest"
+                id="pianoles" value="Piano Lessons">Piano Lessons</label>
+              <label for="violin"><input type="checkbox" name="interest"
+                id="violinles" value="Violin Lessons">Violin Lessons</label>
+              <label for="rent"><input type="checkbox" name="interest"
+                id="rent" value="Rental Equipment">Rental Equipment</label>
+            </fieldset>
+
+            <input type="submit" id="submit" value="Submit" class="btn">
+          </form>
         </div>
 
     </main>
