--- a/MUSIC/index.html
+++ b/MUSIC/index.html
@@ -26,11 +26,11 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li> &nbsp; &nbsp;
-        <li><a href="lessons.html">Lessons</a></li> &nbsp; &nbsp;
-        <li><a href="instructors.html">Instructors</a></li> &nbsp; &nbsp;
-        <li><a href="instructors.html">Rentals</a></li> &nbsp; &nbsp;
-        <li><a href="contact.html">Contact</a></li> &nbsp; &nbsp;
+        <li><a href="index.html">Home</a></li>
+        <li><a href="lessons.html">Lessons</a></li>
+        <li><a href="instructors.html">Instructors</a></li>
+        <li><a href="rentals.html">Rentals</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
